syntax = "proto3";

package pb_msg;
option go_package = "./pb_msg";

//文本消息
message TextElem{
  string content = 1;
}
//图片消息
message ImageElem{
  string url = 1;
}