syntax = "proto3";


package routeClient;

option go_package = "./routeClient";

message GateReq{
  string  channelId = 1;
  bytes   message = 2;
}
message RouteReply{ 
  bytes   body = 1;
}

service route {
  rpc GatePushMsg(GateReq) returns(RouteReply);
}